# WorldNN

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.githooks/: pre-commit
experiments/: analyze_latent_failure.py  analyze_stochastic_resonance.py  ci_at_scale.py  ci_dynamics.py  continuous_state.py  coordination_quality.py  demo.py  expanded_ci_sweep.py  fix_1d_rl.py  iso_performance.py  learnability_bounds.py  mi_chain.py  multirock_ci.py  obj025_bio_calibration.py  obj025_bootstrap_ci.py  obj025_claim_evidence_summary.py  obj025_markov_blanket.py  obj025_mi_vs_sensory.py  obj025_sa_vs_recon.py  obj026_1rock_vs_2rock.py  obj026_power_analysis.py  obj026_seed_robustness.py  obj026_sensory_capacity_2rock.py  obj027_asymmetry_scaling.py  obj028_1d_sensory_capacity.py  obj034_outcome_alignment.py  obj035_sparse_supervision.py  obj036_1d_sensory_capacity_fast.py  oracle_expanded.py  oracle_gpu.py  perception_ladder.py  perturbation_study.py  perturbation_study_ppo.py  plot_oracle_vs_vae.py  plot_proxy_results.py  predictive_processing.py  rock_push.py  run_continuous.sbatch  run_oracle_gpu.sbatch  run_ppo_sweep.sbatch  (+13 more)
paper/: draft.md
results/: ci_at_scale.json  ci_at_scale_checkpoint.json  ci_dynamics.json  ci_dynamics_checkpoint.json  continuous_checkpoint.json  coordination_quality.json  coordination_quality_checkpoint.json  expanded_ci_checkpoint.json  expanded_ci_sweep.json  multirock_ci.json  multirock_ci_checkpoint.json  obj025_bio_calibration.json  obj025_bootstrap_ci.json  obj025_mi_vs_sensory.json  obj025_sa_vs_recon.json  (+33 more)
(+134 files in other folders)
